--- a/moo-nad.cabal
+++ b/moo-nad.cabal
@@ -1,4 +1,4 @@
-cabal-version:      2.4
+cabal-version:      3.0
 name:               moo-nad
 version:            0.1.0.0
 
@@ -8,6 +8,7 @@ maintainer:         diaz_carrete@yahoo.com
 extra-source-files: CHANGELOG.md
 
 library
+    signatures:       Moo
     exposed-modules:  Moo.Prelude
     build-depends:    base ^>=4.15.0.0
     hs-source-dirs:   lib
