--- a/moo-nad.cabal
+++ b/moo-nad.cabal
@@ -10,7 +10,8 @@ extra-source-files: CHANGELOG.md
 library
     signatures:       Moo
     exposed-modules:  Moo.Prelude
-    build-depends:    base ^>=4.15.0.0
+    build-depends:    base ^>= 4.15.0.0,
+--                    mtl ^>= 2.2
     hs-source-dirs:   lib
     default-language: Haskell2010
 
