--- a/moo-nad.cabal
+++ b/moo-nad.cabal
@@ -11,7 +11,7 @@ library
     signatures:       Moo
     exposed-modules:  Moo.Prelude
     build-depends:    base ^>= 4.15.0.0,
-                      sop-core ^>= 0.5.0.0
+--                    sop-core ^>= 0.5.0.0
 --                    mtl ^>= 2.2
     hs-source-dirs:   lib
     default-language: Haskell2010
