--- a/moo-nad.cabal
+++ b/moo-nad.cabal
@@ -19,7 +19,8 @@ library
 library example-logic-that-logs
     signatures:       Moo
     exposed-modules:  LogicThatLogs
-    build-depends:    base ^>= 4.15.0.0
+    build-depends:    base ^>= 4.15.0.0,
+                      moo-nad
     hs-source-dirs:   lib-example-logic-that-logs
     default-language: Haskell2010
 
