--- a/moo-nad.cabal
+++ b/moo-nad.cabal
@@ -26,6 +26,19 @@ library example-logic-that-logs
 
 library example-impl
     exposed-modules:  Moo
-    build-depends:    base ^>= 4.15.0.0
+    build-depends:    base ^>= 4.15.0.0,
+                      transformers ^>= 0.5
     hs-source-dirs:   lib-example-impl
+    default-language: Haskell2010
+
+test-suite tests
+    type:             exitcode-stdio-1.0
+    hs-source-dirs:   test
+    main-is:          tests.hs
+    build-depends:    
+      tasty           ^>= 1.3.1,
+      tasty-hunit     ^>= 0.10.0.2,
+      moo-nad,
+      example-logic-that-logs,
+      example-impl
     default-language: Haskell2010
