--- a/moo-nad.cabal
+++ b/moo-nad.cabal
@@ -7,31 +7,38 @@ maintainer:         diaz_carrete@yahoo.com
 
 extra-source-files: CHANGELOG.md
 
+common common
+    build-depends:    base ^>= 4.15.0.0
+
 library
+    import:           common
     signatures:       Moo
     exposed-modules:  Moo.Prelude
-    build-depends:    base ^>= 4.15.0.0,
+    build-depends:    
 --                    sop-core ^>= 0.5.0.0
 --                    mtl ^>= 2.2
     hs-source-dirs:   lib
     default-language: Haskell2010
 
 library example-logic-that-logs
+    import:           common
     signatures:       Moo
     exposed-modules:  LogicThatLogs
-    build-depends:    base ^>= 4.15.0.0,
+    build-depends:   
                       moo-nad
     hs-source-dirs:   lib-example-logic-that-logs
     default-language: Haskell2010
 
 library example-impl
+    import:           common
     exposed-modules:  Moo
-    build-depends:    base ^>= 4.15.0.0,
+    build-depends:    
                       transformers ^>= 0.5
     hs-source-dirs:   lib-example-impl
     default-language: Haskell2010
 
 test-suite tests
+    import:           common
     type:             exitcode-stdio-1.0
     hs-source-dirs:   test
     main-is:          tests.hs
