--- a/moo-nad.cabal
+++ b/moo-nad.cabal
@@ -34,6 +34,10 @@ maintainer:         diaz_carrete@yahoo.com
 category:           Control
 extra-source-files: CHANGELOG.md, README.md
 
+source-repository    head
+    type:     git
+    location: https://github.com/danidiaz/moo-nad.git
+
 common common
     build-depends:    base ^>= 4.15.0.0,
                       mtl  ^>= 2.2,
