--- a/moo-nad.cabal
+++ b/moo-nad.cabal
@@ -39,7 +39,7 @@ source-repository    head
     location: https://github.com/danidiaz/moo-nad.git
 
 common common
-    build-depends:    base ^>= 4.15.0.0,
+    build-depends:    base >= 4.11.0.0,
                       mtl  ^>= 2.2,
                       dep-t ^>= 0.4.4
     default-language: Haskell2010
